--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,10 +5,13 @@
 --callouctcolor: #8be9fd;
 --hovercolor: #6272a4;
 --darkMaincolor: #50fa7b;
+--whitecolor: #f8f8f2;
+--blackcolor: #282a36;
+--blacklightcolor: #44475a;
 --rainbow: linear-gradient(to left, #ff5555, #ffb86c, #f1fa8c, #50fa7b, #8be9fd, #bd93f9, #ff79c6);
 }
 html {
-  color: #232333;
+  color: var(--blackcolor);
   font-family: 'Roboto Mono', monospace;
   font-size: 15px;
   line-height: 1.6em;
@@ -23,7 +26,7 @@ body{
 
 ::selection {
   background: var(--maincolor);
-  color: #fff;
+  color: var(--whitecolor);
 }
 
 p, ol, ul {
@@ -33,28 +36,15 @@ p, ol, ul {
 
 hr {
   border: 0;
-  border-top: 3px dotted var(--bordercl);
+  border-top: 2px solid var(--blacklightcolor);
   margin: 1em 0;
 }
 
 blockquote {
   border-left: 3px solid var(--bordercl);
-  color: #737373;
+  color: var(--blacklightcolor);
   margin: 0;
   padding-left: 1em;
-}
-
-a {
-  border-bottom: 3px solid var(--maincolor);
-  color: inherit;
-  text-decoration: none;
-}
-a:hover {
-    background-color: var(--hovercolor);
-    color: #fff;
-}
-a:not(.main a) {
-  border-bottom: 3px solid var(--hovercolor);
 }
 
 .main a:hover {
@@ -150,9 +140,22 @@ header {
 }
 
 header .main {
-  font-size: 1.5rem;
+  font-size: 15px;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1.title {
+    margin-bottom: 0;
+}
+h1 {
+    font-size: 2rem;
+    line-height: 1.5em;
+    margin-top: 1em;
+}
+h2 {
+  font-size: 1.6rem;
+  margin-top: 2em;
+}
+h3, h4, h5, h6 {
   font-size: 1.2rem;
   margin-top: 2em;
 }
@@ -188,7 +191,7 @@ h6::before { content: '###### '; }
 footer {
   display: flex;
   align-items: center;
-  border-top: 0.4rem dotted var(--bordercl);
+  border-top: 2px solid var(--blacklightcolor);
   padding: 2rem 0rem;
   margin-top: 2rem;
 }
@@ -207,19 +210,9 @@ footer {
 }
 
 /* Common */
-.title h1 {
-  margin-bottom: 0;
-}
-
 time {
   color: grey;
 }
-
-/* Posts */
-article .title {
-  margin-bottom: 1em;
-}
-
 
 /* Callout */
 .callout {
@@ -233,15 +226,6 @@ article .title {
   margin: 0;
 }
 
-.callout a {
-  border-bottom: 3px solid #fff;
-}
-
-.callout a:hover {
-  background-color: #fff;
-  color: var(--callouctcolor);
-}
-
 .site-description {
 display: flex;
 justify-content: space-between;
@@ -249,19 +233,11 @@ justify-content: space-between;
 .tags li::before{
   content: "🏷 ";
 }
-.tags a{
-  border-bottom: 3px solid var(--maincolor);
-}
-.tags a:hover{
-  color:white;
-  background-color: var(--hovercolor);
-}
+
 svg{
   max-height: 15px;
 }
-.soc:hover{
-  color: white;
-}
+
 .draft-label{
     color: var(--bordercl);
     text-decoration: none;
