Improve spacing and sizing of headers in list view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,18 +146,18 @@ header .main {
 h1.title {
     margin-bottom: 0;
 }
-h1 {
+article h1 {
     font-size: 2rem;
     line-height: 1.5em;
     margin-top: 1em;
 }
-h2 {
+article h2 {
   font-size: 1.6rem;
   margin-top: 2em;
 }
-h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
   font-size: 1.2rem;
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 h1::before, h2::before, h3::before, h4::before, h5::before, h6::before {
